--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "url": "https://github.com/adlnet/xAPIWrapper.git"
   },
   "devDependencies": {
-    "doxstrap": "~0.0.5",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-bump": "0.0.16",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-exec": "~0.4.6"
+    "grunt-exec": "~0.4.6",
+    "doxstrap": "~0.0.5"
   },
   "dependencies": {
     "mocha": "^5.2.0",
-    "should": "^13.2.3",
-    "text-encoding": "^0.7.0"
+    "should": "^13.2.3"
   }
 }
